--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,13 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="purpura">@android:color/holo_purple</color>
+    <color name="Salmon">#e68356</color>
+    <color name="hint">#FFFBD9D9</color>
+
+
+    <color name="headline">#1f1235</color>
+    <color name="subheadline">#1b1425</color>
+    <color name="Button">#ff6e6c</color>
+    <color name="ButtonText">#1f1235</color>
+
 </resources>
