--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,6 +78,7 @@
         android:layout_marginLeft="30dp"
         app:passwordToggleEnabled="true"
 
+
         >
 
         <EditText
@@ -96,15 +97,15 @@
     <Button
         android:id="@+id/button_inicio"
         android:layout_width="wrap_content"
-        android:layout_height="72dp"
-        android:layout_below="@+id/password"
+        android:layout_height="60dp"
+
+        android:layout_below="@id/lineaCentral"
         android:layout_alignParentStart="true"
+
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="41dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="212dp"
-        android:layout_marginBottom="182dp"
+        android:layout_marginStart="126dp"
+        android:layout_marginTop="98dp"
+        android:layout_marginEnd="127dp"
         android:backgroundTint="@color/purpura"
         android:text="Ingresar" />
 
